# Synapse

./: .env.sample  .gitignore  README.md  pyproject.toml  synapse
app/: __init__.py  main.py
app/cli/: banner.py  completer.py  context.py  formatter.py  repl.py
app/cli/commands/: base.py  global_cmds.py  module_cmds.py  registry.py  session_cmds.py
app/core/: config.py  connection.py  errors.py  events.py  session.py  transport.py
app/core/auth/: api_key.py  aws_sso.py  base.py  oauth2.py  pat.py  registry.py
app/core/models/: __init__.py  auth.py  connection.py  prompts.py  resources.py  server.py  tools.py
app/modules/: base.py  registry.py
app/modules/enumerate/: prompts.py  resources.py  tools.py
app/modules/invoke/: tool_call.py
app/utils/: async_helpers.py
docs/: DESIGN_MVP.md  REFERENCE.md
