[project]
name = "synapse"
version = "0.1.0"
description = "MCP interaction framework for security professionals"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "mcp>=1.20",
    "prompt_toolkit>=3.0",
    "rich>=13.0",
    "python-dotenv>=1,<2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
    "mypy",
]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
